# ma1_stagh500_snellium

./: .gitignore
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
.obsidian/plugins/pdf-plus/: data.json
GanttProject/: internship_gantt_chart.gan
camera_control/: .~lock.uC_communication_grammar.ods#  uC_communication_grammar.ods  usb_sniffing_4_random.csv  waiver_of_rights-snellium-student(1).odt
camera_control/.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
camera_control/code/: .~lock.deserialization_performance_analysis.ods#  analyze_usb_sniffing.py
camera_control/code/conference_code/: main.py
camera_control/code/plug_and_play_cpp/: CMakeLists.txt  Makefile  main.cpp
camera_control/code/plug_and_play_cpp/include/: uC_SerialCommunication.hpp
camera_control/code/plug_and_play_cpp/src/: uC_SerialCommunication.cpp
camera_control/code/plug_and_play_python/: uC_Commands.py  uC_SerialCommunication.py  uC_commands_test.py  uC_performance_test.py  uC_test.py
camera_control/journal/: 0.0 - TO DO.md  1 - 15.07 - Week 1.md  1 - 19.07.md  1.1 - 15.07 - Week 1.md  1.3 - 17.07.md  15.07.md  2 - 22.07 - Week 2.md  2.2 - 23.07.md  24.07.md  25.07.md  26.07 - Day OFF.md  29.07 - Week 3.md  3 - 31.07.md  30.07.md  31.07.md  4.1 - 05.08 - week 4.md  4.2 - 06.08.md  4.3 - 07.08.md  5.1 - 12.08 - Week 5.md  5.3 - 14.08.md
camera_control/portfolio/: Component_for_camera_control_unit.ods  Order_of_components_2207.ods  internship_gantt_diagram.csv  uC_communication_grammar.ods
doc/design/: design.md
(+154 files in other folders)
